--- a/WeRead/app/src/main/AndroidManifest.xml
+++ b/WeRead/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.weread">
 
+    <!--    All required permissions-->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -25,13 +28,8 @@
             android:name=".Search"
             android:exported="true" />
         <activity
-            android:name=".Home"
-            android:exported="true" />
-        <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"/>
     </application>
 
 </manifest>
